# eidolon

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.dev.yml  docker-compose.yml  docker-dev-config.json  eidolon.example.json  opencode.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.claude/: settings.json
.claude/agents/: eidolon-coder.md  eidolon-debugger.md  eidolon-planner.md  eidolon-reviewer.md  eidolon-tester.md
.claude/rules/: documentation.md  python.md  security.md  testing.md  typescript.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-desktop.yml  build-ios.yml  ci.yml  claude.yml  ios-build.yml  pr-review.yml  release-cli.yml  release.yml
apps/desktop/: ACCESSIBILITY.md  VERIFICATION.md  build-cli.sh  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
apps/ios/: SETUP.md  VERIFICATION.md  VOICEOVER.md  project.yml
apps/shared/: design-tokens.json  tokens.css
apps/web/: VERIFICATION.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
deploy/: README.md  WINDOWS_SERVICE.md  com.eidolon.daemon.plist  eidolon-backup.service  eidolon-backup.timer  eidolon-windows.ps1  eidolon.service
deploy/windows/: install-service.ps1  uninstall-service.ps1
docs/: COMPARISON.md  COMPLETENESS_AUDIT.md  DEPLOYMENT.md  EXECUTION_PLAN.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INTEGRATION_PLAN.md  POST_V1_PLAN.md  REVIEW_FINDINGS.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  TASK_LIST.md  TROUBLESHOOTING.md  V1.2_V2.0_PLAN.md  VISION.md  audit-round-1.md  audit-round-2.md  audit-round-3.md  audit-round-4.md  audit-round-5.md  audit-round-6-7.md  audit-round-8-10.md  practical-audit-r1-backend.md  practical-audit-r1-frontend.md  practical-audit-r1-rust.md  practical-audit-r2-4-shapes.md  practical-audit-r2-4.md  practical-audit-r5-7.md  practical-audit-r8-10.md
docs/audits/: 2026-03-07-desktop-app-audit.md
docs/design/: ACCESSIBILITY.md  AGENTIC_WORKFLOWS.md  ARCHITECTURE.md  CHANNELS.md  CLAUDE_INTEGRATION.md  (+10 more)
services/gpu-worker/: Dockerfile.cuda  docker-compose.yml  pyproject.toml
services/gpu-worker/src/: auth.py  health.py  logging_config.py  main.py  stt.py  tts.py  voice_ws.py
services/gpu-worker/tests/: conftest.py  test_auth.py  test_health.py  test_logging_config.py  test_middleware.py  test_stt.py  test_tts.py  test_voice_ws.py
workspace/: CLAUDE.md  SOUL.md
(+132 files in other folders)
