[project]
name = "eidolon-gpu-worker"
version = "0.1.0"
description = "GPU worker for Eidolon TTS/STT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
gpu = [
    "faster-whisper>=1.0,<2",
    "torch>=2.0,<3",
    "transformers>=4.40,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
