[package]
name = "eidolon-desktop"
version = "0.1.0"
edition = "2021"
description = "Eidolon AI Assistant Desktop Client"
authors = ["Manuel Guttmann"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
