[package]
name = "eidolon-desktop"
version = "0.1.7"
edition = "2021"
description = "Eidolon AI Assistant Desktop Client"
authors = ["Manuel Guttmann"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
whoami = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
